--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                     <ul>
                         <li>Pay your friends all over the world</li>
                         <li>0% commission</li>
-                        <li>Transfer money even to those who don't have a wallet
+                        <li>Transfer money even to those who don't have a
+                            wallet
                             yet</li>
                         <li>No tax notice</li>
                     </ul>
@@ -61,7 +62,9 @@
                 </div>
                 <div class="feature-picture">
                     <img class="feature-picture-bg" src="assets/circle.pink.svg" />
-                    <img class="feature-picture-phone" src=" assets/feature.tokens.png" />
+                    <img class="feature-picture-phone"
+                        src="
+                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                assets/feature.tokens.png" />
                 </div>
             </div>
             <div class="feature">
@@ -86,10 +89,12 @@
                 <div class="news-item">
                     <img src="assets/news/a24.png" alt="nft-announcing" />
                     <div class="news-item-content">
-                        <h3>We are announcing winners of HERE Legendary NFTs contest 🥳</h3>
+                        <h3>We are announcing winners of HERE Legendary NFTs
+                            contest 🥳</h3>
                         <p>
                             NFTs will be sent to their .near wallets.
-                            Don’t feel bad, because there are other opportunities
+                            Don’t feel bad, because there are other
+                            opportunities
                             to get more right now...
                         </p>
                         <a href="...">Read more <img src="assets/icons/link-arrow.svg" /></a>
@@ -98,10 +103,12 @@
                 <div class="news-item">
                     <img src="assets/news/a24.png" alt="nft-announcing" />
                     <div class="news-item-content">
-                        <h3>We are announcing winners of HERE Legendary NFTs contest 🥳</h3>
+                        <h3>We are announcing winners of HERE Legendary NFTs
+                            contest 🥳</h3>
                         <p>
                             NFTs will be sent to their .near wallets.
-                            Don’t feel bad, because there are other opportunities
+                            Don’t feel bad, because there are other
+                            opportunities
                             to get more right now...
                         </p>
                         <a href="...">Read more <img src="assets/icons/link-arrow.svg" /></a>
@@ -110,10 +117,12 @@
                 <div class="news-item">
                     <img src="assets/news/a24.png" alt="nft-announcing" />
                     <div class="news-item-content">
-                        <h3>We are announcing winners of HERE Legendary NFTs contest 🥳</h3>
+                        <h3>We are announcing winners of HERE Legendary NFTs
+                            contest 🥳</h3>
                         <p>
                             NFTs will be sent to their .near wallets.
-                            Don’t feel bad, because there are other opportunities
+                            Don’t feel bad, because there are other
+                            opportunities
                             to get more right now...
                         </p>
                         <a href="...">Read more <img src="assets/icons/link-arrow.svg" /></a>
@@ -124,7 +133,6 @@
 
         <section class="comparison">
             <img class="comparison-title" src="assets/web3.title.svg" />
-
             <div class="comparison-table">
                 <div class="comparison-keys">
                     <div class="comparison-keys-item">
@@ -144,6 +152,9 @@
                     </div>
                     <div class="comparison-keys-item">
                         <p>Worldwide</p>
+                    </div>
+                    <div class="comparison-keys-item">
+                        <p>Access to money</p>
                     </div>
                 </div>
                 <div class="comparison-left">
@@ -175,6 +186,10 @@
                         <p class="comparison-column-key">Worldwide</p>
                         <p>Only US</p>
                     </div>
+                    <div class="comparison-column red">
+                        <p class="comparison-column-key">Access to money</p>
+                        <p>PayPall</p>
+                    </div>
                 </div>
                 <div class="comparison-right">
                     <div class="comparison-header">
@@ -186,7 +201,8 @@
                         <p>0%</p>
                     </div>
                     <div class="comparison-column">
-                        <p class="comparison-column-key">Transfer by phone/username</p>
+                        <p class="comparison-column-key">Transfer by
+                            phone/username</p>
                         <p>Yes</p>
                     </div>
                     <div class="comparison-column">
@@ -205,6 +221,10 @@
                         <p class="comparison-column-key">Worldwide</p>
                         <p>Yes</p>
                     </div>
+                    <div class="comparison-column">
+                        <p class="comparison-column-key">Access to money</p>
+                        <p>Just you</p>
+                    </div>
                 </div>
         </section>
 
@@ -214,7 +234,8 @@
                 <div class="secure-banner-content">
                     <h3>We keep your assets safe</h3>
                     <p>
-                        HERE Wallet is an open source non-custodial wallet which
+                        HERE Wallet is an open source non-custodial
+                        wallet which
                         have passed security audit,
                         don’t have KYC, main features are made on smart
                         contracts and all data is encrypted.
@@ -275,7 +296,8 @@
             </div>
             <div class="ask-block">
                 <div class="ask-block-header">
-                    <p>How much time does it take to withdraw money from staking?</p>
+                    <p>How much time does it take to withdraw money from
+                        staking?</p>
                     <img src="assets/icons/arrow-down.svg" />
                 </div>
             </div>
@@ -318,7 +340,8 @@
             <a><img src="assets/icons/telegram.svg" /></a>
             <a><img src="assets/icons/near.svg" /></a>
         </div>
-        <a class="footer-terms" href="...">Privacy policy and Terms of Service</a>
+        <a class="footer-terms" href="...">Privacy policy and Terms of
+            Service</a>
     </footer>
 
     <script src="script.js"></script>
