--- a/privacypolicy/index.html
+++ b/privacypolicy/index.html
@@ -528,7 +528,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#D9f3ebea', en
                 style="font-family: Manrope; font-weight: 500; color: rgb(44, 48, 52);">We reserve the right to modify
                 these Terms at any time at our sole discretion. If we do so, we’ll let you know by either posting the
                 modified Terms on our website, on our mobile application or through other methods of communication which
-                we deem reasonable. If you continue to use TrHEREust Wallet following any modification of the Terms you
+                we deem reasonable. If you continue to use HERE Wallet following any modification of the Terms you
                 shall be deemed to have accepted the modified Terms. If you do not agree to the Terms or any
                 modifications to the Terms, you may not access or use our Services. Our Services are evolving over time,
                 we may change or discontinue all or any part of the Services, at any time and without prior notice, at
